<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/americanfootball"
    tools:context="com.example.theeagle.scorekeeper.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/linear_parent_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="@dimen/dim_0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/team_a_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="@dimen/dim_16dp"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/team_a"
                    android:textColor="@color/textColor"
                    android:textSize="@dimen/dim_24sp"
                    android:textStyle="bold|italic" />

                <TextView
                    android:id="@+id/score_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="@dimen/dim_8dp"
                    android:fontFamily=" sans-serif-light"
                    android:text="@string/_0"
                    android:textColor="@color/textColor3"
                    android:textSize="@dimen/dim_56sp" />

                <Button
                    android:id="@+id/six"
                    style="@style/ScoreButtons"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dim_24dp"
                    android:text="@string/six" />

                <Button
                    android:id="@+id/three"
                    style="@style/ScoreButtons"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/three" />

                <Button
                    android:id="@+id/tackle"
                    style="@style/ScoreButtons"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/two" />

                <Button
                    android:id="@+id/kick"
                    style="@style/ScoreButtons"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/free_throw" />
            </LinearLayout>

            <View
                android:layout_width="@dimen/dim_2dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/dim_24dp"
                android:layout_marginTop="@dimen/dim_24dp"
                android:background="@android:color/darker_gray" />

            <LinearLayout
                android:layout_width="@dimen/dim_0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/team_b_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="@dimen/dim_16dp"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/team_b"
                    android:textColor="@color/textColor"
                    android:textSize="@dimen/dim_24sp"
                    android:textStyle="bold|italic" />

                <TextView
                    android:id="@+id/score_tv_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="@dimen/dim_8dp"
                    android:fontFamily=" sans-serif-light"
                    android:text="@string/_0"
                    android:textAllCaps="false"
                    android:textColor="@color/textColor3"
                    android:textSize="@dimen/dim_56sp" />

                <Button
                    android:id="@+id/six_2"
                    style="@style/ScoreButtons"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dim_24dp"
                    android:text="@string/six" />

                <Button
                    android:id="@+id/three_2"
                    style="@style/ScoreButtons"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/three" />

                <Button
                    android:id="@+id/tackle_2"
                    style="@style/ScoreButtons"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/two" />

                <Button
                    android:id="@+id/kick_2"
                    style="@style/ScoreButtons"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/free_throw"
                    android:textAllCaps="false" />
            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/reset_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_below="@id/linear_parent_1"
            android:layout_centerHorizontal="true"
            android:text="@string/reset"
            android:textColor="@color/textColor"
            android:textStyle="bold" />
    </RelativeLayout>
</ScrollView>
